@@ -50,7 +50,7 @@ our @EXPORT_OK = qw (usleep sleep ualarm alarm gettimeofday time tv_interval
                  stat lstat utime
                 );
 
-our $VERSION = '1.9770';
+our $VERSION = '1.9771';
 our $XS_VERSION = $VERSION;
 $VERSION = eval $VERSION;
 
